fix: input placeholder alignment in iOS

--- a/src/containers/Board/SymbolSearch/SymbolSearch.css
+++ b/src/containers/Board/SymbolSearch/SymbolSearch.css
@@ -9,7 +9,6 @@
   font-size: 21px;
   font-weight: 500;
   font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
-  line-height: 1;
   border: 0;
   color: #fff;
   background: transparent;
